force-app/main/default/objects/Interest_Rate_Setting__mdt/Interest_Rate_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Stores constant interest rate values for loan applications</description>
    <label>Interest Rate Setting</label>
    <pluralLabel>Interest Rate Settings</pluralLabel>
</CustomObject>