force-app/main/default/objects/Interest_Rate_Setting__mdt/fields/Effective_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_c__c</fullName>
    <description>When this rate came into effect</description>
    <label>Effective_Date__c</label>
    <type>Date</type>
</CustomField>