force-app/main/default/objects/Interest_Rate_Setting__mdt/fields/Is_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one rate should be active at a time</description>
    <label>Is_Active__c</label>
    <type>Checkbox</type>
</CustomField>