force-app/main/default/objects/Interest_Rate_Setting__mdt/fields/Rate_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type_c__c</fullName>
    <description>e.g. &quot;Fixed&quot;, &quot;Prime Linked&quot;</description>
    <label>Rate_Type__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>