force-app/main/default/objects/Interest_Rate_Setting__mdt/fields/Rate_Value_c__c.field-meta.xml
<CustomField>
    <fullName>Rate_Value_c__c</fullName>
    <description>The actual interest rate e.g. 8.5</description>
    <label>Rate_Value__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>